--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 asgiref==3.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 Django==6.0
 django-environ==0.12.0
 django-jazzmin==3.0.1
 djangorestframework==3.16.1
 drf-yasg==1.21.11
 environ==1.0
+idna==3.11
 inflection==0.5.1
 packaging==25.0
 pillow==12.0.0
 psycopg2==2.9.11
+psycopg2-binary==2.9.11
 pytz==2025.2
 PyYAML==6.0.3
+requests==2.32.5
 sqlparse==0.5.4
 uritemplate==4.2.0
+urllib3==2.6.0
